--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,8 @@ body {
   display: flex;
   flex-direction: column;
 	font-family: Helvetica;
+  padding-left: 100px;
+  padding-right: 100px;
 }
 
 .header-container {
@@ -11,8 +13,6 @@ body {
   color: white;
   align-items: center;
   margin-bottom: 70px;  
-  padding-left: 100px;
-  padding-right: 100px;  
 }
 
 .header-links {
@@ -38,8 +38,6 @@ a {
   display: flex; 
   flex-wrap: wrap;
   justify-content: space-between;
-  padding-left: 100px;
-  padding-right: 100px; 
 }
 
 .left-sub-content {
@@ -154,7 +152,6 @@ button {
 .call-to-action {
   background-color: white;
   display: flex;
-  flex: 1;
   color: white;
 }
 
@@ -167,6 +164,7 @@ button {
   padding: 50px;
   justify-content: space-between;
   border-radius: 15px;
+  gap: 50px;
 }
 
 .sub-title-call {
@@ -192,6 +190,16 @@ button {
 	clip-path: inset(0 -100vmax);
 }
 
+.footer {
+  background-color: #1F2937;
+  display: flex;
+  flex: 1;
+  justify-content: center;
+}
 
-
+.closing {
+  font-size: larger;
+  color: white;
+  padding: 15px;
+}
 
