--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,8 @@
 body {
-  background-color: #1F2937;
   display: flex;
   flex-direction: column;
   font-family: Helvetica;
-  padding-left: 100px;
-  padding-right: 100px;
+  margin: 0;
 }
 
 .header-container {
@@ -12,7 +10,10 @@ body {
   justify-content: space-between;
   color: white;
   align-items: center;
-  margin-bottom: 70px;  
+  background-color: #1F2937;
+  padding-left: 100px;
+  padding-right: 100px;
+  padding-top: 10px;
 }
 
 .header-links {
@@ -38,6 +39,8 @@ a {
   display: flex; 
   flex-wrap: wrap;
   justify-content: space-between;
+  background-color: #1F2937;
+  padding: 100px 100px 60px 100px;
 }
 
 .left-sub-content {
@@ -76,17 +79,12 @@ button {
 
 .top-middle-container {
   display: flex;
-  margin-top: 40px;
   background-color: white;
   color: black;	
-  width: 100%;
   flex-wrap: wrap;
-}
-
-.top-middle-container,
-.full-bleed {
-  box-shadow: 0 0 0 100vmax white;
-  clip-path: inset(0 -100vmax);
+  padding-left: 100px;
+  padding-right: 100px;
+  padding-top: 20px;
 }
 
 .middle-subtitle {
@@ -127,12 +125,16 @@ button {
   display: flex;  
   flex-direction: column;
   background-color: #E5E7EB;
-  padding: 60px;
+  padding-top: 70px;
+  padding-bottom: 70px;
+  padding-left: 100px;
+  padding-right: 100px;
 }
 
 .quote {
-  font-size: 28px;
+  font-size: 31px;
   font-style: italic;
+  text-align: justify;
 }
 
 .patient {
@@ -141,16 +143,14 @@ button {
   font-weight: bolder;
 }
 
-.bottom-middle-container,
-.full-bleed-two {
-  box-shadow: 0 0 0 100vmax #E5E7EB;  
-  clip-path: inset(0 -100vmax);
-}
-
 .call-to-action {
   background-color: white;
   display: flex;
   color: white;
+  padding-left: 100px;
+  padding-right: 100px;
+  padding-bottom: 40px;
+  padding-top: 40px;
 }
 
 .within {
@@ -159,10 +159,9 @@ button {
   background-color: #3882F6;
   margin-top: 80px;
   margin-bottom: 80px;
-  padding: 50px;
   justify-content: space-between;
   border-radius: 15px;
-  gap: 50px;
+  padding: 50px;
 }
 
 .sub-title-call {
@@ -182,12 +181,6 @@ button {
   border-color: white;
 }
 
-.call-to-action,
-.full-bleed-three {
-  box-shadow: 0 0 0 100vmax white;
-  clip-path: inset(0 -100vmax);
-}
-
 .footer {
   background-color: #1F2937;
   display: flex;
@@ -199,4 +192,3 @@ button {
   color: white;
   padding: 15px;
 }
-
